[package]
name = "webhdfs"
version = "0.2.2"
authors = ["Valery Vybornov <vvybornov@gmail.com>"]
edition = "2018"

description = "Hadoop WebHDFS client library"
homepage = "https://github.com/vvvy/webhdfs-rs"
#documentation = "..."
repository = "https://github.com/vvvy/webhdfs-rs"
readme = "README.md"
keywords = ["hdfs", "webhdfs", "hadoop"]
categories = ["filesystem", "asynchronous"]
license = "Apache-2.0"

[dependencies]
hyper = "0.13"
hyper-tls = "0.4"
http = "0.2"
futures = "0.3"
tokio ={ version = "0.2", features = ["full"] }
bytes = "0.5"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
mime = "0.3"
toml = "0.5"

[features]
default = ["zero-copy-on-write"]
zero-copy-on-write = []

[badges]
travis-ci = { repository = "vvvy/webhdfs-rs", branch = "master" }
maintenance = { status = "actively-developed" }