[package]
name = "webhdfs"
version = "0.3.2"
authors = ["Valery Vybornov <vvybornov@gmail.com>"]
edition = "2018"

description = "Hadoop WebHDFS client library"
homepage = "https://github.com/vvvy/webhdfs-rs"
#documentation = "..."
repository = "https://github.com/vvvy/webhdfs-rs"
readme = "README.md"
keywords = ["hdfs", "webhdfs", "hadoop"]
categories = ["filesystem", "asynchronous"]
license = "Apache-2.0"

[dependencies]
hyper = { version = "0.14", features = ["client", "http1", "stream"] }
hyper-tls = "0.5"
native-tls = "0.2"
http = "0.2"
futures = "0.3"
tokio = { version = "1.2", features = ["rt", "time"] }
bytes = "1.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
mime = "0.3"
toml = "0.5"

[dev-dependencies]
env_logger = "0.7"

[features]
default = ["zero-copy-on-write"]
zero-copy-on-write = []

[badges]
travis-ci = { repository = "vvvy/webhdfs-rs", branch = "master" }
maintenance = { status = "actively-developed" }